--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,3 +1,16 @@
 @import 'tailwindcss';
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
+@plugin "daisyui" {
+    themes: dim --default;
+}
+
+@layer base {
+    html {
+        font-family: "Noto Sans Bengali", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+        font-variation-settings: "wdth" 100;
+    }
+}
