--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -13,4 +13,7 @@
         font-style: normal;
         font-variation-settings: "wdth" 100;
     }
+    ::selection {
+        @apply bg-primary text-primary-content;
+    }
 }
